# Projet-DM-M2

./: .gitignore  CMakeLists.txt  Lien vers Github.txt  README.md  exo1_sphere.cpp
TP1/: exo1_triangle_blanc.cpp  exo2_triangle_couleurs.cpp  exo3_structure_vertex.cpp  exo4_disque.cpp
TP2/: exo1_playing_shader.cpp
TP2/shaders/: color2D.fs.glsl  color2D.vs.glsl  grey2D.fs.glsl
assets/: dungeon_1.json  map1.json  map1.ppm  map1_0.ppm  map1_0.xcf  map1_1.ppm  map1_1.xcf  map1_2.ppm  map1_2.xcf  map1xcf.xcf
assets/textures/: Skeleton.xcf  gobelin.xcf  mushroom.xcf  shadow.xcf
glimac/: CMakeLists.txt
glimac/glimac/: FreeflyCamera.hpp
src/: CombatEntity.cpp  CombatEntity.hpp  Data.hpp  Door.cpp  Door.hpp  InteractiveObject.cpp  InteractiveObject.hpp  Item.cpp  Item.hpp  Ladder.cpp  Ladder.hpp  Main.cpp  Map.cpp  Map.hpp  Model.cpp  Model.hpp  ModelsManager.cpp  ModelsManager.hpp  Monster.cpp  Monster.hpp  Player.cpp  Player.hpp  RenderedObject.cpp  RenderedObject.hpp  ShadersManager.cpp  ShadersManager.hpp  TextRenderer.cpp  TextRenderer.hpp  TexturesManager.cpp  TexturesManager.hpp  Util.cpp  Util.hpp  WorldObject.cpp  WorldObject.hpp  exo1.cpp  exo1_sphere.cpp
src/shaders/: 3D.vs.glsl  3D_facing.vs.glsl  3D_static.vs.glsl  directionallight.fs.glsl  pointlight.fs.glsl  sphere3D.fs.glsl  sphere3D.vs.glsl  tex3D.fs.glsl  text.fs.glsl  text.vs.glsl
